fixed gap

--- a/app/_components/pages/blog-single/blog-mv/blog-mv.module.scss
+++ b/app/_components/pages/blog-single/blog-mv/blog-mv.module.scss
@@ -56,6 +56,7 @@
 
   @include sp {
     flex-direction: column;
+    gap: 0;
   }
 }
 
